--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <body>
         <div class="container-fluid mb-5">
             <div class="row">
+                <div class="col-12 pe-0 ps-0">
+                    <div class="d-flex justify-content-between align-items-center px-2 bg-dark">
+                        <div><h3 class="display-4 text-white heading">CineMagic</h3></div>
+                        <div><button id="folder-select" class="button-61">Select Folder</button></div>
+                    </div>
+                </div>
                 <div class="col-12 ps-0 pe-0">
                     <nav class="p-3 bg-dark navbar-main">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div><h3 class="display-4 text-white heading">CineMagic</h3></div>
-                            <div><button id="folder-select" class="button-61">Select Folder</button></div>
-                        </div>
+                        
                     </nav>
                 </div>
             </div>
